feat: read scan history
